--- a/_posts/2017-12-21-paletti.md
+++ b/_posts/2017-12-21-paletti.md
@@ -22,8 +22,16 @@ lists with palettes, like the `ochRe` and `dutchmasters` lists. Lets start with
 a single palette, this might be useful when you want your coporate identity 
 colors translated into R. Here I just pick some colors found on the [interweb](http://blog.visme.co/website-color-schemes/)
 
-```{r}
+
+```r
 library(paletti)
+```
+
+```
+## Error in library(paletti): there is no package called 'paletti'
+```
+
+```r
 library(ggplot2)
 mycols <- c(
   red    = "#E27D60",
@@ -35,26 +43,53 @@ mycols <- c(
 viz_palette(mycols)
 ```
 
+```
+## Error in viz_palette(mycols): could not find function "viz_palette"
+```
+
 Now, ochRe provided us with two functions, one two create a `ggplot` scale for 
 colours and to create one for fills. These functions can be created in the 
 following fashion
 
-```{r}
+
+```r
 mycols_fill  <- get_scale_fill(get_pal(mycols))
+```
+
+```
+## Error in get_scale_fill(get_pal(mycols)): could not find function "get_scale_fill"
+```
+
+```r
 mycols_color <- get_scale_color(get_pal(mycols))
+```
+
+```
+## Error in get_scale_color(get_pal(mycols)): could not find function "get_scale_color"
 ```
 
 Both now can be used in `ggplot`
 
-```{r}
+
+```r
 mtcars$cyl <- as.character(mtcars$cyl)
 col_plot <- ggplot(mtcars, aes(mpg, drat, color = cyl)) +
   geom_point(size = 4) 
 col_plot + mycols_color()
+```
 
+```
+## Error in mycols_color(): could not find function "mycols_color"
+```
+
+```r
 fill_plot <- ggplot(mtcars, aes(cyl, fill = cyl)) + 
   geom_bar()
 fill_plot + mycols_fill()
+```
+
+```
+## Error in mycols_fill(): could not find function "mycols_fill"
 ```
 
 Now, I said I expanded the `ochRe` code a bit. The function `get_hex` will 
@@ -62,10 +97,24 @@ produce a function that will return a function in which you can directly return
 the hex code by typing its unquoted name. Handy if you want an exact color from
 your palette. Prerequisit is that your palette is a named character vector.
 
-```{r}
+
+```r
 mycols_hex <- get_hex(mycols)
+```
+
+```
+## Error in get_hex(mycols): could not find function "get_hex"
+```
+
+```r
 fill_plot + scale_fill_manual(values = mycols_hex(blue, purple, red))
 ```
+
+```
+## Error in mycols_hex(blue, purple, red): could not find function "mycols_hex"
+```
+
+![plot of chunk unnamed-chunk-4](/figure/source/2017-12-21-paletti/unnamed-chunk-4-1.png)
 
 ## Multiple palettes in a list
 
@@ -74,23 +123,62 @@ difference from a single palette is that in the returned function you have to
 specify the name of the palette youw want to use. If you don't, it defaults to 
 the first palette in the list.
 
-```{r}
-ochRe_col         <- get_scale_color(get_pal(ochre_palettes))
-dutchmasters_fill <- get_scale_fill(get_pal(dutchmasters))
 
+```r
+ochRe_col         <- get_scale_color(get_pal(ochre_palettes))
+```
+
+```
+## Error in get_scale_color(get_pal(ochre_palettes)): could not find function "get_scale_color"
+```
+
+```r
+dutchmasters_fill <- get_scale_fill(get_pal(dutchmasters))
+```
+
+```
+## Error in get_scale_fill(get_pal(dutchmasters)): could not find function "get_scale_fill"
+```
+
+```r
 col_plot + ochRe_col("lorikeet")
+```
+
+```
+## Error in ochRe_col("lorikeet"): could not find function "ochRe_col"
+```
+
+```r
 fill_plot + dutchmasters_fill("view_of_Delft")
+```
+
+```
+## Error in dutchmasters_fill("view_of_Delft"): could not find function "dutchmasters_fill"
 ```
 
 And the same holds for the `get_hex` function. You can feed a list with palettes
 as well. Note that the palettes that you are going to call must have named
 elements.
 
-```{r}
+
+```r
 dutchmasters_hex <- get_hex(dutchmasters)
+```
+
+```
+## Error in get_hex(dutchmasters): could not find function "get_hex"
+```
+
+```r
 fill_plot + scale_fill_manual(values = dutchmasters_hex("anatomy",
                               black(cloak), red(muscle), brown(table)))
 ```
+
+```
+## Error in dutchmasters_hex("anatomy", black(cloak), red(muscle), brown(table)): could not find function "dutchmasters_hex"
+```
+
+![plot of chunk unnamed-chunk-6](/figure/source/2017-12-21-paletti/unnamed-chunk-6-1.png)
 
 That's it, off you go! Add your own color palette(s) and start plotting. Once 
 again a major thanks to the ochRe team for the inspiration and the foundations 
