--- a/_posts/2017-12-21-paletti.md
+++ b/_posts/2017-12-21-paletti.md
@@ -13,7 +13,7 @@ by the wonderful [ochRe package](https://github.com/ropenscilabs/ochRe). As
 mentioned I shamelessly copied the package. I replaced the list with character 
 vectors containing hex colors and did a find and replace to make it 
 `dutchmasters` instead of `ochRe`. This was pretty ugly.  I realized that when 
-we would refactor the  `ochRe` functions, thus creating functions that create the functions, there would no longer be a need to copy-paste and find-and-replace. So that is what I did. I refactored and expanded `ochRe`'s chore into `paletti`. (Name chosen because I liked the ring of it).
+we would refactor the  `ochRe` functions, thus creating functions that create the functions, there would no longer be a need to copy-paste and find-and-replace. So that is what I did. I refactored and expanded `ochRe`'s chore into `paletti`. (Name chosen because I liked the ring of it). You grab it from Github, with `devtools::install_github("edwinth/paletti")`.
 
 ## Single palettes
 
@@ -25,13 +25,6 @@ colors translated into R. Here I just pick some colors found on the [interweb](h
 
 ```r
 library(paletti)
-```
-
-```
-## Error in library(paletti): there is no package called 'paletti'
-```
-
-```r
 library(ggplot2)
 mycols <- c(
   red    = "#E27D60",
@@ -43,9 +36,7 @@ mycols <- c(
 viz_palette(mycols)
 ```
 
-```
-## Error in viz_palette(mycols): could not find function "viz_palette"
-```
+![plot of chunk unnamed-chunk-1](/figure/source/2017-12-21-paletti/unnamed-chunk-1-1.png)
 
 Now, ochRe provided us with two functions, one two create a `ggplot` scale for 
 colours and to create one for fills. These functions can be created in the 
@@ -54,18 +45,7 @@ following fashion
 
 ```r
 mycols_fill  <- get_scale_fill(get_pal(mycols))
-```
-
-```
-## Error in get_scale_fill(get_pal(mycols)): could not find function "get_scale_fill"
-```
-
-```r
 mycols_color <- get_scale_color(get_pal(mycols))
-```
-
-```
-## Error in get_scale_color(get_pal(mycols)): could not find function "get_scale_color"
 ```
 
 Both now can be used in `ggplot`
@@ -78,9 +58,7 @@ col_plot <- ggplot(mtcars, aes(mpg, drat, color = cyl)) +
 col_plot + mycols_color()
 ```
 
-```
-## Error in mycols_color(): could not find function "mycols_color"
-```
+![plot of chunk unnamed-chunk-3](/figure/source/2017-12-21-paletti/unnamed-chunk-3-1.png)
 
 ```r
 fill_plot <- ggplot(mtcars, aes(cyl, fill = cyl)) + 
@@ -88,9 +66,7 @@ fill_plot <- ggplot(mtcars, aes(cyl, fill = cyl)) +
 fill_plot + mycols_fill()
 ```
 
-```
-## Error in mycols_fill(): could not find function "mycols_fill"
-```
+![plot of chunk unnamed-chunk-3](/figure/source/2017-12-21-paletti/unnamed-chunk-3-2.png)
 
 Now, I said I expanded the `ochRe` code a bit. The function `get_hex` will 
 produce a function that will return a function in which you can directly return
@@ -100,18 +76,7 @@ your palette. Prerequisit is that your palette is a named character vector.
 
 ```r
 mycols_hex <- get_hex(mycols)
-```
-
-```
-## Error in get_hex(mycols): could not find function "get_hex"
-```
-
-```r
 fill_plot + scale_fill_manual(values = mycols_hex(blue, purple, red))
-```
-
-```
-## Error in mycols_hex(blue, purple, red): could not find function "mycols_hex"
 ```
 
 ![plot of chunk unnamed-chunk-4](/figure/source/2017-12-21-paletti/unnamed-chunk-4-1.png)
@@ -126,35 +91,18 @@ the first palette in the list.
 
 ```r
 ochRe_col         <- get_scale_color(get_pal(ochre_palettes))
-```
-
-```
-## Error in get_scale_color(get_pal(ochre_palettes)): could not find function "get_scale_color"
-```
-
-```r
 dutchmasters_fill <- get_scale_fill(get_pal(dutchmasters))
-```
 
-```
-## Error in get_scale_fill(get_pal(dutchmasters)): could not find function "get_scale_fill"
-```
-
-```r
 col_plot + ochRe_col("lorikeet")
 ```
 
-```
-## Error in ochRe_col("lorikeet"): could not find function "ochRe_col"
-```
+![plot of chunk unnamed-chunk-5](/figure/source/2017-12-21-paletti/unnamed-chunk-5-1.png)
 
 ```r
 fill_plot + dutchmasters_fill("view_of_Delft")
 ```
 
-```
-## Error in dutchmasters_fill("view_of_Delft"): could not find function "dutchmasters_fill"
-```
+![plot of chunk unnamed-chunk-5](/figure/source/2017-12-21-paletti/unnamed-chunk-5-2.png)
 
 And the same holds for the `get_hex` function. You can feed a list with palettes
 as well. Note that the palettes that you are going to call must have named
@@ -163,19 +111,8 @@ elements.
 
 ```r
 dutchmasters_hex <- get_hex(dutchmasters)
-```
-
-```
-## Error in get_hex(dutchmasters): could not find function "get_hex"
-```
-
-```r
 fill_plot + scale_fill_manual(values = dutchmasters_hex("anatomy",
                               black(cloak), red(muscle), brown(table)))
-```
-
-```
-## Error in dutchmasters_hex("anatomy", black(cloak), red(muscle), brown(table)): could not find function "dutchmasters_hex"
 ```
 
 ![plot of chunk unnamed-chunk-6](/figure/source/2017-12-21-paletti/unnamed-chunk-6-1.png)
