--- a/_posts/2017-09-10-nse.md
+++ b/_posts/2017-09-10-nse.md
@@ -256,7 +256,7 @@ lm(disp ~ not_in_df, data = mtcars)
 ## 
 ## Coefficients:
 ## (Intercept)    not_in_df  
-##      233.22        31.98
+##      229.00        22.26
 ```
 
 But what if the name exists in both environments, which one prevails?
@@ -357,7 +357,7 @@ So the functions that use tidy eval, like those in `dplyr`, automatically quote 
 
 ## `quosure`
 
-Very nice, that quaisquoting. Now what's up with quosures? From their name you might guess they are hybrids of `quotes` and `closures`. We have seen that combination before when we looked at formulas. If we look at quosures, we will see that they are a subclass of the formula, besides being a class of their own.
+Very nice, that quasiquoting. Now what's up with quosures? From their name you might guess they are hybrids of `quotes` and `closures`. We have seen that combination before when we looked at formulas. If we look at quosures, we will see that they are a subclass of the formula, besides being a class of their own.
 
 
 ```r
