--- a/_source/2018-03-11-analyzing-olympics.Rmd
+++ b/_source/2018-03-11-analyzing-olympics.Rmd
@@ -103,7 +103,7 @@ It came to a close two weeks ago. Over two weeks of obsessive watching everythin
 
 Lets take the top ten of the medal table. Now, the rank on the medal table is primarily determined by the number of golds a nation takes. The silvers and bronzes are only taken into account when there are ties. I think that silvers and bronzes should also have some weight. We first visualize all the medals for the top ten.
 
-```{r medal_table, echo=FALSE, out.height= 600, out.width=900}
+```{r medal_table, echo=FALSE}
 medal_to_position <- function(medal_df) {
   n <- medal_df %>% filter(medal_count > 0) %>% select(country) %>% 
     distinct() %>% nrow()
@@ -152,7 +152,7 @@ ggplot(data = medal_df, aes(x_coord, y_coord)) +
 
 We see that there is no country is so one-dimensional as the Netherlands. All others, even the ones lower at the table, toke medals at at least four different sports. Which countries are successfull in many sports, and which dominate a few big ones? This is not so easy to tell from this plot, maybe aside from a few countries taking many golds in one sport. Lets calculate a weighted score for each of the sport-country combinations. Winning a gold will add three points to the score, a silver two, and a bronze one. This results in a score for each sport in which the country took at least one medal. We order the scores within each country high to low and plot them in the Olympic towers plot below.
 
-```{r tower_plot, echo=FALSE, out.height= 600, out.width=900}
+```{r tower_plot, echo=FALSE}
 add_medal_score <- function(df) {
   df %>% 
     mutate(medal_score = case_when(
@@ -223,7 +223,7 @@ data_frame(component = as.factor(1:10),
 
 We start by checking the amount of variance explained by each component. The first two explain about 40%. There is no clear elbow, implying that also higher components will provide us with information. A great advantage of doing of having few rows and columns in the original data is that we can plot both the countries and the sports in a biplot. We start by looking at the first two components.
 
-```{r ggbiplot, echo=FALSE, out.height=600, out.width=900}
+```{r ggbiplot, echo=FALSE}
 gg_biplot <- function(pca_object, 
                       components = c(1, 2)){
   stopifnot( class(pca_object) == 'prcomp' )
@@ -259,13 +259,13 @@ gg_biplot(pca_res)
 
 The first PC is clearly a Germany axis. We already noticed Germany is dominant in a number of sports and it appears it does not have much rivalry in them. The "track" sports bobsleigh, skeleton and luge plus the nordic combined are mainly German affairs. The second PC (with almost as much explained variance as the first) is a Norway versus Canada/USA axis. Of course having the cross-country pointing in the direction of Norway, but also the alpine skiing. Canada and the USA rule the snowboarding, figure skating, ice hockey, freestyle skiing and short track. Since the Norwegians and Germans both are great at ski jumping and biathlon these load on both PC1 and PC2. The first PCs are obviously and naturally dominated by the four biggest winners. The Germans toke a gold in the figure skating and a silver in the ice hockey, so these two sports load a little bit on PC1 as well. 
 
-```{r, echo = FALSE, out.height= 600, out.width=900}
+```{r, echo = FALSE}
 gg_biplot(pca_res, 3:4)
 ```
 
 The third PC is a speed skating versus alpine sports axis, clearly clustering South Korea and the Netherlands as the skating nations. PCs 4, 5, 6 are more nuancing components. For instance stressing the differences between the USA and Canada. This draws the attention to the fact that Canada did not win any medals in the alpine skiing. This is very interesting, why does Canada do well on all the alpine disciplines except the skiing? You would expect them to be good skiers. PC4 and PC6 show that Canada and USA both have some but different overlap with Norway. The smaller PCs do justice to the performances of the countries in the lower half of the top ten. Each did will in a different sport in which also one of the top countries was a force.
 
-```{r, echo=FALSE, out.height= 600, out.width=900}
+```{r, echo=FALSE}
 gg_biplot(pca_res, 5:6)
 ```
 
