--- a/_posts/2018-06-15-s3-generics.md
+++ b/_posts/2018-06-15-s3-generics.md
@@ -53,7 +53,7 @@ mean(out)
 ```
 
 ```
-## [1] 0.05582708
+## [1] 0.2631094
 ```
 
 Works too! And finally we do a `count_letters` method. It takes `z` from the output and counts how often each letter occurs.
@@ -70,7 +70,7 @@ count_letters(out)
 ## Error in count_letters(out): could not find function "count_letters"
 ```
 
-What do you mean "could not find function"? It is a right there! Maybe we made a typo. Mmmm, no it doesn't seem so. Maybe, mmmm, lets look into this.... Half an hour, a bit of swearing and feelings of stupidity later. Pfff, lets not bother about S3, we were happy with just using functions in the first place.
+What do you mean "could not find function"? It is right there! Maybe we made a typo. Mmmm, no it doesn't seem so. Maybe, mmmm, lets look into this.... Half an hour, a bit of swearing and feelings of stupidity later. Pfff, lets not bother about S3, we were happy with just using functions in the first place.
 
 ## Generics
 
@@ -84,7 +84,7 @@ print
 ```
 ## function (x, ...) 
 ## UseMethod("print")
-## <bytecode: 0x7f94ca733c00>
+## <bytecode: 0x7ff0f7069200>
 ## <environment: namespace:base>
 ```
 
@@ -95,7 +95,7 @@ mean
 ```
 ## function (x, ...) 
 ## UseMethod("mean")
-## <bytecode: 0x7f94ca3b5208>
+## <bytecode: 0x7ff0f5ce3428>
 ## <environment: namespace:base>
 ```
 
