--- a/_source/2017-08-24-dplyr-recipes.Rmd
+++ b/_source/2017-08-24-dplyr-recipes.Rmd
@@ -79,7 +79,7 @@ bare_to_quo_mult_chars <- function(x, ...) {
 bare_to_quo_mult_chars(mtcars, list("vs", "cyl"))
 ```
 
-#### quoting full expressions
+#### quoting full expression
 
 Although quoting column names is most often used, it is by no means the only option. We can use the above to quote full expressions.
 
@@ -91,9 +91,21 @@ filter_func <- function(x, filter_exp) {
 filter_func(mtcars, hp == 93)
 ```
 
+#### quoting full expression in a character: parse_expr
+
+If the expressions arrives in a character rather than a bare, you can convert it into a call using `rlang::parse_expr`.
+
+```{r}
+filter_by_char <- function(x, char) {
+  func_call <- rlang::parse_expr(char)
+  x %>% filter(!!func_call)
+}
+filter_by_char(mtcars, "cyl == 6") %>% head(1)
+```
+
 #### Edit notes
 
-I mistakingly thought that `rlang::sym(s)` created quosures. However, as pointed out to me by a reader, this creates a `name`, not a `quosure`. A `name` however can also be unquoted. See this [github discussion](https://github.com/tidyverse/rlang/issues/116).
+1) I mistakingly thought that `rlang::sym(s)` created quosures. However, as pointed out to me by a reader, this creates a `name`, not a `quosure`. A `name` however can also be unquoted. See this [github discussion](https://github.com/tidyverse/rlang/issues/116).
 
 ```{r}
 just_a_name <- rlang::sym("cyl")
@@ -101,4 +113,5 @@ class(just_a_name)
 mtcars %>% select(!!just_a_name) %>% head(1)
 ```
 
+2) Quoting expressions in a character was added roughly a year after the first apperance of this blog.
 
