--- a/_source/2017-04-26-outlier-bin.Rmd
+++ b/_source/2017-04-26-outlier-bin.Rmd
@@ -69,7 +69,7 @@ update_tickmarks_ceiling <- function(gg_obj,
                                      co, 
                                      max_print) {
   ranges <- suppressMessages(
-    ggplot_build(gg_obj)$layout$panel_ranges[[1]])
+    ggplot_build(gg_obj)$layout$panel_params[[1]])
   label_to_add <- sprintf("(%s , %s)", round(co, 1), max_print)
   tick_positions <- ranges$x.major_source
   tick_labels    <- ranges$x.labels
@@ -91,7 +91,7 @@ update_tickmarks_floor <- function(gg_obj,
                                    co, 
                                    min_print) {
   ranges <- suppressMessages(
-    ggplot_build(gg_obj)$layout$panel_ranges[[1]])
+    ggplot_build(gg_obj)$layout$panel_params[[1]])
   label_to_add <- sprintf("(%s , %s)", min_print, round(co, 1))
   tick_positions <- ranges$x.major_source
   tick_labels    <- ranges$x.labels
@@ -108,6 +108,8 @@ overlap_floor <- function(positions, cut_off) {
   (positions[1] - cut_off) / ticks_dif < 0.25
 }
 ```
+
+**Note, the code has been modified to make it compatible with v.3 of ggplot**
 
 I guess we all use it, the good old histogram. One of the first things we are taught in *Introduction to Statistics* and routinely applied whenever coming across a new continuous variable. However, it easily gets messed up by outliers. Putting most of the data into a single bin or a few bins, and scattering the outliers barely visible over the x-axis. This distribution might look familiar
 
@@ -210,7 +212,7 @@ update_tickmarks_ceiling <- function(gg_obj,
                                      co, 
                                      max_print) {
   ranges <- suppressMessages(
-    ggplot_build(gg_obj)$layout$panel_ranges[[1]])
+    ggplot_build(gg_obj)$layout$panel_params[[1]])
   label_to_add <- sprintf("(%s , %s)", round(co, 1), max_print)
   tick_positions <- ranges$x.major_source
   tick_labels    <- ranges$x.labels
@@ -232,7 +234,7 @@ update_tickmarks_floor <- function(gg_obj,
                                    co, 
                                    min_print) {
   ranges <- suppressMessages(
-    ggplot_build(gg_obj)$layout$panel_ranges[[1]])
+    ggplot_build(gg_obj)$layout$panel_params[[1]])
   label_to_add <- sprintf("(%s , %s)", min_print, round(co, 1))
   tick_positions <- ranges$x.major_source
   tick_labels    <- ranges$x.labels
