--- a/_posts/2017-07-20-unique_id.md
+++ b/_posts/2017-07-20-unique_id.md
@@ -24,7 +24,7 @@ some_df %>% unique_id(a)
 ##       a     b   val
 ##   <dbl> <int> <dbl>
 ## 1     3   103  -0.4
-## 2     3   104  -0.9
+## 2     3   104  -1.4
 ```
 
 ```r
@@ -35,7 +35,7 @@ some_df %>% unique_id(a, b)
 ## [1] TRUE
 ```
 
-Here you find the source code of the function. You can also obtain it by installing the package accompanying this blog using `devtools::install.github(edwinth/thatssorandom)`.
+Here you find the source code of the function. You can also obtain it by installing the package accompanying this blog using `devtools::install.github("edwinth/thatssorandom"")`.
 
 
 ```r
