--- a/_posts/2020-05-14-drake-ml.md
+++ b/_posts/2020-05-14-drake-ml.md
@@ -9,7 +9,7 @@ output: html_document
 tags: [machine learning, workflow, drake, R]
 ---
 
-A few weeks ago, Miles McBain toke us for a tour through his project organisation in [this blogpost](https://milesmcbain.xyz/the-drake-post/). Not surprisingly given Miles' frequent shoutouts about the package, it is completely centered around `drake`. About a year ago on twitter, he convinced me to take this package for a spin. I was immediately sold. It cured a number of pains I had over the years in machine learning projects; storing intermediate results, reproducibility, having a single version of the truth, forgetting in which order steps should be applied, etc. In addition to Miles, I'd like to share my `drake`-centered workflow. As I found out from reading the blog, there is a great deal of overlap in our workflows.
+A few weeks ago, Miles McBain took us for a tour through his project organisation in [this blogpost](https://milesmcbain.xyz/the-drake-post/). Not surprisingly given Miles' frequent shoutouts about the package, it is completely centered around `drake`. About a year ago on twitter, he convinced me to take this package for a spin. I was immediately sold. It cured a number of pains I had over the years in machine learning projects; storing intermediate results, reproducibility, having a single version of the truth, forgetting in which order steps should be applied, etc. In addition to Miles, I'd like to share my `drake`-centered workflow. As I found out from reading the blog, there is a great deal of overlap in our workflows.
 
 This blog post highlights the differences and additions in my workflow from the one described by Miles. It is assumed you have read his blog post. I just highlight a few of the benefits he mentioned, on which I totally agree. 
 
