updated outlier blog

--- a/_source/2017-04-26-outlier-bin.Rmd
+++ b/_source/2017-04-26-outlier-bin.Rmd
@@ -9,107 +9,183 @@ tags: [R, ggplot, histogram, outliers]
 
 ```{r, echo = FALSE}
 gg_outlier_bin <- function(x,
-                           var_name,
-                           cut_off_floor,
-                           cut_off_ceiling,
-                           col = "black",
-                           fill = "cornflowerblue",
-                           fill_outlier_bins = "forestgreen",
-                           binwidth = NULL) {
-  
-  printing_min_max <- x %>% summarise_(sprintf("round(min(%s, na.rm = TRUE), 1)", var_name),
-                                       sprintf("round(max(%s, na.rm = TRUE), 1)", var_name))
-  
-  ceiling_filter <- ifelse(!is.na(cut_off_ceiling),
-                           sprintf("%s < %f", var_name, cut_off_ceiling),
-                           "1 == 1") 
-  floor_filter   <- ifelse(!is.na(cut_off_floor),
-                           sprintf("%s > %f", var_name, cut_off_floor),
-                           "1 == 1")
-  
-  x_regular <- x %>% filter_(ceiling_filter, floor_filter) %>% 
-    select_(var_name)
-  
-  x_to_roll_ceiling <- x %>% filter_(
-    sprintf("%s >= %f", var_name, cut_off_ceiling)) %>% select_(var_name)
-  if (!is.na(cut_off_ceiling)) x_to_roll_ceiling[, 1] <- cut_off_ceiling
-  
-  x_to_roll_floor <- x %>% filter_(
-    sprintf("%s <= %f", var_name, cut_off_floor)) %>% select_(var_name)
-  if (!is.na(cut_off_floor)) x_to_roll_floor[, 1] <- cut_off_floor
-  
-  plot_obj <- ggplot(x_regular, aes_string(var_name)) +
-    geom_histogram(col = col, fill = fill, binwidth = binwidth)
-  
+                            var_name,
+                            cut_off_floor     = NA_real_,
+                            cut_off_ceiling   = NA_real_,
+                            col               = "black",
+                            fill              = "cornflowerblue",
+                            fill_outlier_bins = "forestgreen",
+                            binwidth          = NULL) {
+
+  hist_input_checking(x,
+                      var_name,
+                      cut_off_floor,
+                      cut_off_ceiling,
+                      col,
+                      fill,
+                      fill_outlier_bins,
+                      binwidth)
+
+  printing_min_max <- get_printing_min_max(x, var_name)
+
+  regular_x <- filter_regular_x(x, var_name, cut_off_floor, cut_off_ceiling)
+
+  plot_obj <- ggplot2::ggplot(regular_x, ggplot2::aes_string({{var_name}})) +
+    ggplot2::geom_histogram(col = col, fill = fill, binwidth = binwidth)
+
   if (!is.na(cut_off_ceiling)) {
+    x_ceil            <- x[x[[var_name]] >= cut_off_ceiling, var_name, drop = FALSE]
+    x_ceil[, 1]       <- cut_off_ceiling
     ticks_for_ceiling <- update_tickmarks_ceiling(plot_obj, cut_off_ceiling,
-                                                  printing_min_max[1,2])
+                                                  printing_min_max[2])
     plot_obj <- plot_obj +
-      geom_histogram(data = x_to_roll_ceiling, fill = fill_outlier_bins, col = col,
-                     binwidth = binwidth) +
-      scale_x_continuous(breaks = ticks_for_ceiling$tick_positions,
-                         labels = ticks_for_ceiling$tick_labels)
+      ggplot2::geom_histogram(data = x_ceil,
+                              fill = fill_outlier_bins,
+                              col = col,
+                              binwidth = binwidth) +
+      ggplot2::scale_x_continuous(breaks = ticks_for_ceiling$tick_positions,
+                                  labels = ticks_for_ceiling$tick_labels)
   }
-  
+
   if (!is.na(cut_off_floor)) {
+    x_floor         <- x[x[[var_name]] <= cut_off_floor, var_name, drop = FALSE]
+    x_floor[, 1]    <- cut_off_floor
     ticks_for_floor <- update_tickmarks_floor(plot_obj, cut_off_floor,
-                                              printing_min_max[1,1])
-    plot_obj <- plot_obj +
-      geom_histogram(data = x_to_roll_floor, fill = fill_outlier_bins, 
-                     col = col, binwidth = binwidth) +
-      scale_x_continuous(breaks = ticks_for_floor$tick_positions,
-                         labels = ticks_for_floor$tick_labels)
+                                              printing_min_max[1])
+    plot_obj <-
+      suppressMessages(
+        plot_obj +
+          ggplot2::geom_histogram(data = x_floor,
+                                  fill = fill_outlier_bins,
+                                  col = col, binwidth = binwidth) +
+          ggplot2::scale_x_continuous(breaks = ticks_for_floor$tick_positions,
+                                      labels = ticks_for_floor$tick_labels)
+      )
   }
-  
-  return(plot_obj)
+  plot_obj
 }
 
 
-update_tickmarks_ceiling <- function(gg_obj, 
-                                     co, 
+hist_input_checking <- function(x,
+                                var_name,
+                                cut_off_floor,
+                                cut_off_ceiling,
+                                col,
+                                fill,
+                                fill_outlier_bins,
+                                binwidth) {
+
+  stopifnot(is.data.frame(x),
+            is.character(var_name),
+            is.numeric(cut_off_floor),
+            is.numeric(cut_off_ceiling),
+            is.character(col),
+            is.character(fill),
+            is.character(fill_outlier_bins))
+
+  if (!var_name %in% colnames(x)) {
+    stop(sprintf("%s is not a column in x", var_name))
+  }
+
+  if ( is.na(cut_off_floor) & is.na(cut_off_ceiling)) {
+    stop("Neither cut_off_floor, nor cut_off_ceiling are specified")
+  }
+
+  if ( !is.na(cut_off_floor) && !is.na(cut_off_ceiling) ) {
+    if (cut_off_floor >= cut_off_ceiling) {
+      stop("cut_off_floor should be smaller than cut_off_ceiling")
+    }
+  }
+
+  if (!is.na(cut_off_floor)) {
+    if (cut_off_floor < min(x[[var_name]])) {
+      stop(sprintf("cut_off_floor lower than the lowest value in %s",
+                   var_name))
+    }
+    if (cut_off_floor > max(x[[var_name]])) {
+      stop(sprintf("cut_off_floor higher than the highest value in %s",
+                   var_name))
+    }
+  }
+
+  if (!is.na(cut_off_ceiling)) {
+    if (cut_off_ceiling < min(x[[var_name]])) {
+      stop(sprintf("cut_off_ceiling lower than the lowest value in %s",
+                   var_name))
+    }
+    if (cut_off_ceiling > max(x[[var_name]])) {
+      stop(sprintf("cut_off_ceiling higher than the highest value in %s",
+                   var_name))
+    }
+  }
+}
+
+get_printing_min_max <- function(x, var_name) {
+
+  var <- x[[var_name]]
+  c(min = round(min(var, na.rm = TRUE), 1),
+    max = round(max(var, na.rm = TRUE), 1))
+}
+
+filter_regular_x <- function(x,
+                             var_name,
+                             cut_off_floor = NA_real_,
+                             cut_off_ceiling = NA_real_) {
+  x_var <- x[[var_name]]
+  ind   <- rep(TRUE, length(x_var))
+  if (!is.na(cut_off_floor)) ind[x_var <= cut_off_floor] <- FALSE
+  if (!is.na(cut_off_ceiling)) ind[x_var >= cut_off_ceiling] <- FALSE
+  x[ind, var_name, drop = FALSE]
+}
+
+update_tickmarks_ceiling <- function(plot_obj,
+                                     cut_off,
                                      max_print) {
   ranges <- suppressMessages(
-    ggplot_build(gg_obj)$layout$panel_params[[1]])
-  label_to_add <- sprintf("(%s , %s)", round(co, 1), max_print)
-  tick_positions <- ranges$x.major_source
-  tick_labels    <- ranges$x.labels
-  if (overlap_ceiling(tick_positions, co)) {
+    ggplot2::ggplot_build(plot_obj)$layout$panel_params[[1]]$x)
+  label_to_add <- sprintf("(%s , %s)", round(cut_off, 1), max_print)
+  tick_positions <- ranges$get_breaks()
+  tick_labels    <- ranges$get_labels()
+  if (overlap_ceiling(tick_positions, cut_off)) {
     tick_positions <- tick_positions[-length(tick_positions)]
     tick_labels    <- tick_labels[-length(tick_labels)]
   }
-  return(list(tick_positions = c(tick_positions, co),
+  return(list(tick_positions = c(tick_positions, cut_off),
               tick_labels    = c(tick_labels, label_to_add)))
 }
 
 overlap_ceiling <- function(positions, cut_off) {
+  positions <- positions[!is.na(positions)]
   n <- length(positions)
   ticks_dif <- positions[n] - positions[n-1]
   (cut_off - positions[n]) / ticks_dif < 0.25
 }
 
-update_tickmarks_floor <- function(gg_obj, 
-                                   co, 
+update_tickmarks_floor <- function(plot_obj,
+                                   cut_off,
                                    min_print) {
   ranges <- suppressMessages(
-    ggplot_build(gg_obj)$layout$panel_params[[1]])
-  label_to_add <- sprintf("(%s , %s)", min_print, round(co, 1))
-  tick_positions <- ranges$x.major_source
-  tick_labels    <- ranges$x.labels
-  if (overlap_floor(tick_positions, co)) {
+    ggplot2::ggplot_build(plot_obj)$layout$panel_params[[1]]$x)
+  label_to_add <- sprintf("(%s , %s)", min_print, round(cut_off, 1))
+  tick_positions <- ranges$get_breaks()
+  tick_labels    <- ranges$get_labels()
+
+  if (overlap_floor(tick_positions, cut_off)) {
     tick_positions <- tick_positions[-1]
     tick_labels    <- tick_labels[-1]
   }
-  return(list(tick_positions = c(co, tick_positions),
+  return(list(tick_positions = c(cut_off, tick_positions),
               tick_labels    = c(label_to_add, tick_labels)))
 }
 
 overlap_floor <- function(positions, cut_off) {
+  positions <- positions[!is.na(positions)]
   ticks_dif <- positions[2] - positions[1]
   (positions[1] - cut_off) / ticks_dif < 0.25
 }
 ```
 
-**Note, the code has been modified to make it compatible with v.3 of ggplot**
+**The functionality has been implemented in the function ggoutlier_hist in the ggoutlier package, which you can find here https://github.com/EdwinTh/ggoutlier. Please use this as your source, this is where the code will be maintained.**
 
 I guess we all use it, the good old histogram. One of the first things we are taught in *Introduction to Statistics* and routinely applied whenever coming across a new continuous variable. However, it easily gets messed up by outliers. Putting most of the data into a single bin or a few bins, and scattering the outliers barely visible over the x-axis. This distribution might look familiar
 
@@ -137,7 +213,6 @@ Not bad. However, it now suggests incorrectly that many observations are exactly
 ```{r, warning = FALSE}
 gg_outlier_bin(hist_data, 
                "x", 
-               cut_off_floor = NA,
                cut_off_ceiling = 10,
                binwidth = 0.1)
 ```
@@ -152,101 +227,177 @@ data_frame(x = c(runif(100, 0, 100), rnorm(1000, 50, 2))) %>%
 
 ```{r}
 gg_outlier_bin <- function(x,
-                           var_name,
-                           cut_off_floor,
-                           cut_off_ceiling,
-                           col = "black",
-                           fill = "cornflowerblue",
-                           fill_outlier_bins = "forestgreen",
-                           binwidth = NULL) {
-  
-  printing_min_max <- x %>% summarise_(sprintf("round(min(%s, na.rm = TRUE), 1)", var_name),
-                                       sprintf("round(max(%s, na.rm = TRUE), 1)", var_name))
-  
-  ceiling_filter <- ifelse(!is.na(cut_off_ceiling),
-                           sprintf("%s < %f", var_name, cut_off_ceiling),
-                           "1 == 1") 
-  floor_filter   <- ifelse(!is.na(cut_off_floor),
-                           sprintf("%s > %f", var_name, cut_off_floor),
-                           "1 == 1")
-  
-  x_regular <- x %>% filter_(ceiling_filter, floor_filter) %>% 
-    select_(var_name)
-  
-  x_to_roll_ceiling <- x %>% filter_(
-    sprintf("%s >= %f", var_name, cut_off_ceiling)) %>% select_(var_name)
-  if (!is.na(cut_off_ceiling)) x_to_roll_ceiling[, 1] <- cut_off_ceiling
-  
-  x_to_roll_floor <- x %>% filter_(
-    sprintf("%s <= %f", var_name, cut_off_floor)) %>% select_(var_name)
-  if (!is.na(cut_off_floor)) x_to_roll_floor[, 1] <- cut_off_floor
-  
-  plot_obj <- ggplot(x_regular, aes_string(var_name)) +
-    geom_histogram(col = col, fill = fill, binwidth = binwidth)
-  
+                            var_name,
+                            cut_off_floor     = NA_real_,
+                            cut_off_ceiling   = NA_real_,
+                            col               = "black",
+                            fill              = "cornflowerblue",
+                            fill_outlier_bins = "forestgreen",
+                            binwidth          = NULL) {
+
+  hist_input_checking(x,
+                      var_name,
+                      cut_off_floor,
+                      cut_off_ceiling,
+                      col,
+                      fill,
+                      fill_outlier_bins,
+                      binwidth)
+
+  printing_min_max <- get_printing_min_max(x, var_name)
+
+  regular_x <- filter_regular_x(x, var_name, cut_off_floor, cut_off_ceiling)
+
+  plot_obj <- ggplot2::ggplot(regular_x, ggplot2::aes_string({{var_name}})) +
+    ggplot2::geom_histogram(col = col, fill = fill, binwidth = binwidth)
+
   if (!is.na(cut_off_ceiling)) {
+    x_ceil            <- x[x[[var_name]] >= cut_off_ceiling, var_name, drop = FALSE]
+    x_ceil[, 1]       <- cut_off_ceiling
     ticks_for_ceiling <- update_tickmarks_ceiling(plot_obj, cut_off_ceiling,
-                                                  printing_min_max[1,2])
+                                                  printing_min_max[2])
     plot_obj <- plot_obj +
-      geom_histogram(data = x_to_roll_ceiling, fill = fill_outlier_bins, col = col,
-                     binwidth = binwidth) +
-      scale_x_continuous(breaks = ticks_for_ceiling$tick_positions,
-                         labels = ticks_for_ceiling$tick_labels)
+      ggplot2::geom_histogram(data = x_ceil,
+                              fill = fill_outlier_bins,
+                              col = col,
+                              binwidth = binwidth) +
+      ggplot2::scale_x_continuous(breaks = ticks_for_ceiling$tick_positions,
+                                  labels = ticks_for_ceiling$tick_labels)
   }
-  
+
   if (!is.na(cut_off_floor)) {
+    x_floor         <- x[x[[var_name]] <= cut_off_floor, var_name, drop = FALSE]
+    x_floor[, 1]    <- cut_off_floor
     ticks_for_floor <- update_tickmarks_floor(plot_obj, cut_off_floor,
-                                              printing_min_max[1,1])
-    plot_obj <- plot_obj +
-      geom_histogram(data = x_to_roll_floor, fill = fill_outlier_bins, 
-                     col = col, binwidth = binwidth) +
-      scale_x_continuous(breaks = ticks_for_floor$tick_positions,
-                         labels = ticks_for_floor$tick_labels)
+                                              printing_min_max[1])
+    plot_obj <-
+      suppressMessages(
+        plot_obj +
+          ggplot2::geom_histogram(data = x_floor,
+                                  fill = fill_outlier_bins,
+                                  col = col, binwidth = binwidth) +
+          ggplot2::scale_x_continuous(breaks = ticks_for_floor$tick_positions,
+                                      labels = ticks_for_floor$tick_labels)
+      )
   }
-  
-  return(plot_obj)
+  plot_obj
 }
 
 
-update_tickmarks_ceiling <- function(gg_obj, 
-                                     co, 
+hist_input_checking <- function(x,
+                                var_name,
+                                cut_off_floor,
+                                cut_off_ceiling,
+                                col,
+                                fill,
+                                fill_outlier_bins,
+                                binwidth) {
+
+  stopifnot(is.data.frame(x),
+            is.character(var_name),
+            is.numeric(cut_off_floor),
+            is.numeric(cut_off_ceiling),
+            is.character(col),
+            is.character(fill),
+            is.character(fill_outlier_bins))
+
+  if (!var_name %in% colnames(x)) {
+    stop(sprintf("%s is not a column in x", var_name))
+  }
+
+  if ( is.na(cut_off_floor) & is.na(cut_off_ceiling)) {
+    stop("Neither cut_off_floor, nor cut_off_ceiling are specified")
+  }
+
+  if ( !is.na(cut_off_floor) && !is.na(cut_off_ceiling) ) {
+    if (cut_off_floor >= cut_off_ceiling) {
+      stop("cut_off_floor should be smaller than cut_off_ceiling")
+    }
+  }
+
+  if (!is.na(cut_off_floor)) {
+    if (cut_off_floor < min(x[[var_name]])) {
+      stop(sprintf("cut_off_floor lower than the lowest value in %s",
+                   var_name))
+    }
+    if (cut_off_floor > max(x[[var_name]])) {
+      stop(sprintf("cut_off_floor higher than the highest value in %s",
+                   var_name))
+    }
+  }
+
+  if (!is.na(cut_off_ceiling)) {
+    if (cut_off_ceiling < min(x[[var_name]])) {
+      stop(sprintf("cut_off_ceiling lower than the lowest value in %s",
+                   var_name))
+    }
+    if (cut_off_ceiling > max(x[[var_name]])) {
+      stop(sprintf("cut_off_ceiling higher than the highest value in %s",
+                   var_name))
+    }
+  }
+}
+
+get_printing_min_max <- function(x, var_name) {
+
+  var <- x[[var_name]]
+  c(min = round(min(var, na.rm = TRUE), 1),
+    max = round(max(var, na.rm = TRUE), 1))
+}
+
+filter_regular_x <- function(x,
+                             var_name,
+                             cut_off_floor = NA_real_,
+                             cut_off_ceiling = NA_real_) {
+  x_var <- x[[var_name]]
+  ind   <- rep(TRUE, length(x_var))
+  if (!is.na(cut_off_floor)) ind[x_var <= cut_off_floor] <- FALSE
+  if (!is.na(cut_off_ceiling)) ind[x_var >= cut_off_ceiling] <- FALSE
+  x[ind, var_name, drop = FALSE]
+}
+
+update_tickmarks_ceiling <- function(plot_obj,
+                                     cut_off,
                                      max_print) {
   ranges <- suppressMessages(
-    ggplot_build(gg_obj)$layout$panel_params[[1]])
-  label_to_add <- sprintf("(%s , %s)", round(co, 1), max_print)
-  tick_positions <- ranges$x.major_source
-  tick_labels    <- ranges$x.labels
-  if (overlap_ceiling(tick_positions, co)) {
+    ggplot2::ggplot_build(plot_obj)$layout$panel_params[[1]]$x)
+  label_to_add <- sprintf("(%s , %s)", round(cut_off, 1), max_print)
+  tick_positions <- ranges$get_breaks()
+  tick_labels    <- ranges$get_labels()
+  if (overlap_ceiling(tick_positions, cut_off)) {
     tick_positions <- tick_positions[-length(tick_positions)]
     tick_labels    <- tick_labels[-length(tick_labels)]
   }
-  return(list(tick_positions = c(tick_positions, co),
+  return(list(tick_positions = c(tick_positions, cut_off),
               tick_labels    = c(tick_labels, label_to_add)))
 }
 
 overlap_ceiling <- function(positions, cut_off) {
+  positions <- positions[!is.na(positions)]
   n <- length(positions)
   ticks_dif <- positions[n] - positions[n-1]
   (cut_off - positions[n]) / ticks_dif < 0.25
 }
 
-update_tickmarks_floor <- function(gg_obj, 
-                                   co, 
+update_tickmarks_floor <- function(plot_obj,
+                                   cut_off,
                                    min_print) {
   ranges <- suppressMessages(
-    ggplot_build(gg_obj)$layout$panel_params[[1]])
-  label_to_add <- sprintf("(%s , %s)", min_print, round(co, 1))
-  tick_positions <- ranges$x.major_source
-  tick_labels    <- ranges$x.labels
-  if (overlap_floor(tick_positions, co)) {
+    ggplot2::ggplot_build(plot_obj)$layout$panel_params[[1]]$x)
+  label_to_add <- sprintf("(%s , %s)", min_print, round(cut_off, 1))
+  tick_positions <- ranges$get_breaks()
+  tick_labels    <- ranges$get_labels()
+
+  if (overlap_floor(tick_positions, cut_off)) {
     tick_positions <- tick_positions[-1]
     tick_labels    <- tick_labels[-1]
   }
-  return(list(tick_positions = c(co, tick_positions),
+  return(list(tick_positions = c(cut_off, tick_positions),
               tick_labels    = c(label_to_add, tick_labels)))
 }
 
 overlap_floor <- function(positions, cut_off) {
+  positions <- positions[!is.na(positions)]
   ticks_dif <- positions[2] - positions[1]
   (positions[1] - cut_off) / ticks_dif < 0.25
 }
